Fix Collapse with bootstrap.

--- a/Lexicon-LMS/Content/collapsestyle.css
+++ b/Lexicon-LMS/Content/collapsestyle.css
@@ -1,10 +1,7 @@
 ﻿.content {
-    width: 311px;
+    width: 310px;
 }
 
-.content2{
-    width:100%;
-}
 
 table {
 border-collapse: collapse;
